--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <script src="main.js"></script>
     <title>Quiz</title>
   </head>
   <body>
-    <h1>Quiz</h1>
-    <p>a timed quiz to test people common knowledge and geography</p>
-    <button>start</button>
+    <div id="startQuiz">
+      <h1>Quiz</h1>
+      <p>a timed quiz to test people common knowledge and geography</p>
+      <button>start</button>
+    </div>
   </body>
 </html>
