start quizzed removed start section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="startQuiz">
       <h1>Quiz</h1>
       <p>a timed quiz to test people common knowledge and geography</p>
-      <button>start</button>
+      <button onclick="startQuiz()">start</button>
     </div>
   </body>
 </html>
