Added timer to the project

--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
       <p>a timed quiz to test people common knowledge and geography</p>
       <button onclick="startQuiz()">start</button>
     </div>
+    <div id="timerValue"></div>
   </body>
 </html>
