--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
       <button onclick="startQuiz()">start</button>
     </div>
     <div id="timerValue"></div>
+    <div id="questionSection"></div>
   </body>
 </html>
