validate answer check answer correct or wrong

--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     </div>
     <div id="timerValue"></div>
     <div id="questionSection"></div>
+    <div id="status"></div>
   </body>
 </html>
