--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     <div id="timerValue"></div>
     <div id="questionSection"></div>
     <div id="status"></div>
+    <div id="form">Name:<input type="text" name="name" /></div>
   </body>
 </html>
