Add adding to local storage and fix bugs

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     <div id="timerValue"></div>
     <div id="questionSection"></div>
     <div id="status"></div>
-    <div id="form">Name:<input type="text" name="name" /></div>
+    <div id="form">
+      <h4 id="hs-alert"></h4>
+      <div><input id="initials" type="text" name="name" /></div>
+      <button id="submit-highscore">Submit Highscore</button>
+    </div>
+    <div id="highscoresSection"></div>
   </body>
 </html>
